[package]
name = "wifi-test"
version = "0.1.0"
authors = ["horvbalint <horvbalint99@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "z"
strip = true
lto = true

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp32c3 = "0.8.1"
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = { version = "=0.45.0", features = ["experimental", "alloc"] }
esp-idf-hal = "0.40.1"
embedded-svc = "0.24.0"
log = "0.4"
anyhow = "1"
toml-cfg = "0.1"
riscv = { version = "0.10.0" }
serde_qs = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
palette = { version = "0.5.0", default-features = false, features = ["std"] }
postcard = { version = "1.0.2", features = ["heapless", "heapless-cas", "use-std"] }


[build-dependencies]
embuild = "0.31.0"
